# Fyrion

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
Editor/: CMakeLists.txt
Editor/Source/Fyrion/Editor/: Editor.cpp  Editor.hpp  EditorTypes.hpp  MenuItem.cpp  MenuItem.hpp  WorldEditor.cpp  WorldEditor.hpp
Editor/Source/Fyrion/Editor/Action/: AssetEditorActions.cpp  AssetEditorActions.hpp  EditorAction.cpp  EditorAction.hpp  SceneEditorAction.cpp  SceneEditorAction.hpp
Editor/Source/Fyrion/Editor/Asset/: AssetEditor.cpp  AssetEditor.hpp  AssetImporter.hpp  AssetTypes.hpp  FileTreeCache.cpp  FileTreeCache.hpp  RegisterAssetTypes.cpp
Editor/Source/Fyrion/Editor/Editor/: AssetEditor.cpp  AssetEditor.hpp  GraphEditor.cpp  GraphEditor.hpp  SceneEditor.cpp  SceneEditor.hpp
Editor/Source/Fyrion/Editor/ImGui/: FieldRenderers.cpp  ImGuiEditor.cpp  ImGuiEditor.hpp
Editor/Source/Fyrion/Editor/Launcher/: Launcher.cpp  Launcher.hpp  LauncherTypes.hpp
Editor/Source/Fyrion/Editor/Scene/: SceneEditor.cpp  SceneEditor.hpp
Editor/Source/Fyrion/Editor/Window/: EntityTreeWindow.cpp  EntityTreeWindow.hpp  GraphEditorWindow.cpp  GraphEditorWindow.hpp  ProjectBrowserWindow.cpp  ProjectBrowserWindow.hpp  PropertiesWindow.cpp  PropertiesWindow.hpp  SceneTreeWindow.cpp  SceneTreeWindow.hpp  SceneViewWindow.cpp  SceneViewWindow.hpp  TextureViewWindow.cpp  TextureViewWindow.hpp  WorldViewWindow.cpp  WorldViewWindow.hpp
Engine/: CMakeLists.txt
Engine/Source/Fyrion/: Common.hpp  Engine.cpp  Engine.hpp  TypeRegister.cpp  TypeRegister.hpp
Engine/Source/Fyrion/Asset/: Asset.cpp  Asset.hpp  AssetDatabase.cpp  AssetDatabase.hpp  AssetHandler.cpp  AssetHandler.hpp  AssetManager.cpp  AssetManager.hpp  AssetSerialization.cpp  AssetSerialization.hpp  AssetTypes.cpp  AssetTypes.hpp  StreamObject.hpp
Engine/Source/Fyrion/Assets/: AssetTypes.hpp  Assets.cpp  FontAsset.cpp  ShaderAsset.cpp
Engine/Source/Fyrion/Core/: Algorithm.hpp  Allocator.cpp  Allocator.hpp  Any.hpp  ArgParser.hpp  Array.hpp  Attributes.hpp  Chronometer.hpp  Color.cpp  Color.hpp  CoreTypeRegister.cpp  Event.cpp  Event.hpp  FileWatcher.cpp  FileWatcher.hpp  FixedArray.hpp  Format.cpp  Format.hpp  FormatUtils.hpp  Graph.hpp  GraphTypes.hpp  Hash.hpp  HashBase.hpp  HashMap.hpp  HashSet.hpp  Image.cpp  Image.hpp  Logger.cpp  Logger.hpp  Math.hpp  Optional.hpp  Pair.hpp  Random.hpp  Registry.cpp  Registry.hpp  Repository.cpp  Repository.hpp  Serialization.cpp  Serialization.hpp  SharedPtr.hpp  (+19 more)
Engine/Source/Fyrion/Graphics/: FreeViewCamera.cpp  FreeViewCamera.hpp  Graphics.cpp  Graphics.hpp  GraphicsAssets.cpp  GraphicsAssets.hpp  GraphicsTypeRegister.cpp  GraphicsTypes.cpp  GraphicsTypes.hpp  MeshUtils.cpp  MeshUtils.hpp  RenderAssetHandler.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderPipeline.hpp  RenderStorage.cpp  RenderStorage.hpp  RenderUtils.cpp  RenderUtils.hpp  ShaderAsset.cpp  ShaderAsset.hpp  ShaderManager.cpp  ShaderManager.hpp  ViewportRenderer.cpp  ViewportRenderer.hpp
Engine/Source/Fyrion/Graphics/Assets/: DCCAsset.cpp  DCCAsset.hpp  MaterialAsset.cpp  MaterialAsset.hpp  MeshAsset.cpp  MeshAsset.hpp  ShaderAsset.cpp  ShaderAsset.hpp  TextureAsset.cpp  TextureAsset.hpp
Engine/Source/Fyrion/Graphics/DefaultRenderPipeline/: DefaultRenderPipeline.cpp  DefaultRenderPipeline.hpp  DefaultRenderPipelineNodes.cpp  DefaultRenderPipelineNodes.hpp  DefaultRenderPipelineTypes.hpp  GraphNodes.cpp  LightingRenderPass.cpp  PostProcessRenderPass.cpp  SSAOPasses.cpp  SceneRenderPass.cpp  ShadowMapRenderPass.cpp  SkyboxBlitRenderPass.cpp  SkyboxGenRenderPass.cpp  SkyboxRenderPass.cpp
Engine/Source/Fyrion/Graphics/Device/: RenderDevice.hpp
Engine/Source/Fyrion/IO/: Asset.cpp  Asset.hpp  FileSystem.cpp  FileSystem.hpp  FileSystemUnix.cpp  FileSystemWin32.cpp  FileTypes.hpp  FileWatcher.cpp  FileWatcher.hpp  Input.cpp  Input.hpp  InputTypes.hpp  Path.hpp  RegisterIOTypes.cpp
Engine/Source/Fyrion/ImGui/: FieldRenderers.cpp  ImGui.cpp  ImGui.hpp  ImGuiPlatform.hpp
Engine/Source/Fyrion/ImGui/Lib/: builders.cpp  builders.h  drawing.cpp  drawing.h  imconfig.h  imgui.cpp  (+8 more)
Engine/Source/Fyrion/Platform/: Platform.cpp  Platform.hpp  PlatformDesktop.cpp  PlatformTypes.hpp  PlatformUnix.cpp  PlatformWin32.cpp  PlatformWin32Style.cpp
Engine/Source/Fyrion/Repository/: Repository.cpp  Repository.hpp  RepositoryTypes.hpp  ResourceTypes.hpp
Engine/Source/Fyrion/Resource/: AssetTree.cpp  AssetTree.hpp  Repository.cpp  Repository.hpp  ResourceAssets.cpp  ResourceAssets.hpp  ResourceBuilder.hpp  ResourceGraph.cpp  ResourceGraph.hpp  ResourceObject.hpp  ResourceSerialization.cpp  ResourceSerialization.hpp  ResourceTypes.hpp  StreamObject.hpp
Engine/Source/Fyrion/Scene/: Actor.cpp  Actor.hpp  Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  RegisterSceneTypes.cpp  Scene.cpp  Scene.hpp  SceneAssets.hpp  SceneManager.cpp  SceneManager.hpp  SceneObject.cpp  SceneObject.hpp  SceneTypeRegister.cpp  SceneTypes.hpp
Engine/Source/Fyrion/World/: Archetype.hpp  Query.hpp  Storage.hpp  System.hpp  WordAsset.hpp  World.cpp  World.hpp  WorldTypeRegister.cpp  WorldTypes.hpp
Engine/Source/Fyrion/World2/: World.hpp
Engine/Test/: EntryPoint.cpp
Engine/Test/Files/ShaderTest/: Test.raster  TestComp.comp
Engine/Test/Fyrion/: DocTest.hpp
Engine/Test/Fyrion/Asset/: AssetDirectoryTest.cpp  AssetSerializationTest.cpp  AssetTest.cpp
Engine/Test/Fyrion/Core/: AlgorithmTest.cpp  AnyTest.cpp  ArrayTest.cpp  EventTest.cpp  HashMapTest.cpp  HashSetTest.cpp  LoggerTest.cpp  ReflectionTest.cpp  SharedPtrTest.cpp  StringConverterTests.cpp  StringTest.cpp  TypeInfoTest.cpp  UniquePtrTest.cpp
Engine/Test/Fyrion/Graphics/: ShaderManagerTest.cpp
Engine/Test/Fyrion/IO/: FileSystemTest.cpp  PathTest.cpp
Engine/Test/Fyrion/Repository/: RepositoryTests.cpp
Engine/Test/Fyrion/Resource/: RepositoryTests.cpp  ResourceAssetTests.cpp  ResourceGraphTests.cpp  ResourceSerializationTests.cpp
Engine/Test/Fyrion/Scene/: SceneObjectTests.cpp
Engine/Test/Fyrion/World/: ChangeDetectionTest.cpp  WorldTest.cpp  WorldTests.cpp
(+124 files in other folders)
